--- a/templates/payments/success.html
+++ b/templates/payments/success.html
@@ -26,13 +26,14 @@
         </div>
     </div>
 </div>
-<div class="container mt-2 text-center">
-    <div class="alert alert-success rounded-pill" role="alert">
-      <h3>Your payment has been successfully processed. Thank you for your payment!</h3>
+<div class="container-fade mt-1 text-center">
+    <div class="alert alert-success text-success rounded-4 shadow" role="alert">
+      <p>Your payment has been successfully processed. Thank you for your payment!</p>
+      <p><small>Confirmation Id : H468454542121</small></p>
+      <small>Date : 07/15/2025 02:32</small>
     </div>
     <a href="{% url 'payments:payment_case_list' %}" class="btn btn-sm px-4 py-2 rounded-pill btn-primary">Back to Payment Cases</a>
     <a href="{% url 'pages:user-dashboard' %}" class="btn btn-sm px-4 py-2 rounded-pill btn-primary">Your dashboard</a>
-
 </div>
 
 </div>
